# p-ambiata

./: .travis.yml  Makefile  NOTICE.txt  README.md  ambiata-p.cabal  ambiata-p.lock-7.10.2  boris-git.toml  boris.toml  cabal  mafia  master.toml  p.cabal
src/: P.hs
src/P/: Applicative.hs  Bool.hs  Debug.hs  Either.hs  EitherT.hs  Foldable.hs  Function.hs  Functor.hs  IO.hs  List.hs  Maybe.hs  Monad.hs  Monoid.hs  Ord.hs  Show.hs
src/P/Bifunctor/: Trans.hs
src/P/Maybe/: Strict.hs
test/: PTest.hs  ambiata-p-test.cabal  test.hs
test/P/: ApplicativeTest.hs  BoolTest.hs  EitherTest.hs  FoldableTest.hs  FunctionTest.hs  ListTest.hs  MaybeTest.hs  MonoidTest.hs  OrdTest.hs
test/Test/P/: Applicative.hs  Bool.hs  Either.hs  EitherT.hs  Foldable.hs  Function.hs  List.hs  Maybe.hs  Monoid.hs  Ord.hs
test/Test/P/Bifunctor/: Trans.hs
test/Test/P/Bifunctor/Trans/: Laws.hs
