name:                  ambiata-p
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              A commmon prelude for Ambiata project.
category:              Prelude
cabal-version:         >= 1.22
build-type:            Simple
description:           A set of standard preludes for Ambiata projects. \
                       Emphasis firstly on safety, and secondly on      \
                       consistency of core functions across projects.

library
  build-depends:
                          base                        >= 4.6        && < 5
                        , bifunctors                  >= 4.2        && < 5.6
                        , containers                  >= 0.4        && < 0.6
                        , deepseq                     >= 1.3        && < 1.5
                        , semigroups                  >= 0.16       && < 0.19
                        , text                        >= 1.1        && < 1.3
                        , transformers                >= 0.4        && < 0.6

  default-language:       Haskell2010

  ghc-options:          -Wall
  if impl(ghc >= 8.0)
    ghc-options:        -fno-warn-redundant-constraints

  hs-source-dirs:
                       src

  exposed-modules:
                       P
                       P.Applicative
                       P.Bifunctor.Trans
                       P.Bool
                       P.Either
                       P.Functor
                       P.Maybe
                       P.Maybe.Strict
                       P.Monad
                       P.Monoid
                       P.Ord
                       P.List
                       P.Function
                       P.Foldable
                       P.Debug
                       P.Show

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , mtl                           == 2.2.*
                     , QuickCheck                    >= 2.8.2      && < 2.9
                     , quickcheck-properties
                     , ambiata-p
                     , semigroups
                     , transformers
  default-language:    Haskell2010
  other-modules:       
                       Test.P.Applicative
                       Test.P.Bifunctor.Trans
                       Test.P.Bifunctor.Trans.Laws
                       Test.P.Bool
                       Test.P.Either
                       Test.P.Foldable
                       Test.P.Function
                       Test.P.List
                       Test.P.Maybe
                       Test.P.Monoid
                       Test.P.Ord
