name:                  p
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              A commmon prelude for Ambiata project.
category:              Prelude
cabal-version:         >= 1.8
build-type:            Simple
description:           A set of standard preludes for Ambiata projects. \
                       Emphasis firstly on safety, and secondly on      \
                       consistency of core functions across projects.

library
  build-depends:
                          base                        >= 4.6        && < 5
                        , bifunctors                  >= 4.2        && <= 5
                        , semigroups                  == 0.16.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       P
                       P.Applicative
                       P.Bool
                       P.Either
                       P.Maybe
                       P.Monoid
                       P.Ord
                       P.List
                       P.Function
                       P.Foldable
                       P.Debug

test-suite test
  type:           exitcode-stdio-1.0
  main-is:        test.hs
  ghc-options:    -Wall -threaded -O2
  hs-source-dirs: test
  build-depends:       base
                     , either                        >= 4.3        && < 4.5
                     , mtl                           == 2.2.*
                     , QuickCheck
                     , quickcheck-properties
                     , p
                     , transformers
